# Gumbo

./: .env.example  .gitignore  Gumbo Notes.txt  README.md  advanced_personal_assistant_langgraph_flowchart.md  pyproject.toml
gumbo/: __init__.py  config.py  main.py
gumbo/agent/: runtime.py  services.py
gumbo/cli/: ui.py
gumbo/graph/: workflow.py
gumbo/llm/: ollama.py
gumbo/logging/: traces.py
gumbo/memory/: manager.py
gumbo/models/: state.py
gumbo/storage/: sqlite_store.py
gumbo/telegram/: __init__.py  bot.py
gumbo/tools/: base.py  file_ops.py  registry.py  shell.py  web_search.py
src/gumbo/: app.py  main.py
src/gumbo/bot/: handlers.py
src/gumbo/config/: settings.py
src/gumbo/experts/: __init__.py  prompt_template.py  user_facing_ex.py
src/gumbo/llm/: client.py
src/gumbo/state/: history.py
src/gumbo/utils/: logging.py  text.py
src/telegram_llm_bot/: __init__.py  app.py  main.py
src/telegram_llm_bot/bot/: handlers.py
src/telegram_llm_bot/config/: settings.py
src/telegram_llm_bot/llm/: client.py
tests/: test_graph_flow.py  test_handlers.py  test_intent_and_planner.py  test_llm_client.py  test_memory.py  test_settings.py  test_text.py  test_tools.py
