[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gumbo"
version = "0.1.0"
description = "Telegram bot wrapper around an LLM provider"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-telegram-bot>=21.0,<22.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.27.0"
]

[project.scripts]
gumbo = "telegram_llm_bot.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
